dyn-inventory/tests/failures/init_name_keyword_ident.stderr
error: expected identifier, found keyword `fn`
  --> tests/failures/init_name_keyword_ident.rs:18:17
   |
18 |     init_name = fn,
   |                 ^^
